# rogue

./: .cah.sh  .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
assets/images/raw/: texture_one.aseprite
src/: assets.h  main.cpp
src/assets/: assets.h  assets.hpp  images.h  player.png.hpp  sprite_one.png.hpp  sprite_two.png.hpp  ubuntu-font.ttf.h  ubuntu-font.ttf.hpp
src/assets/images/: combined.h.h  raw.h  texture_one.png.h  texture_two.png.h
src/assets/images/raw/: texture_one.aseprite.h  texture_two.aseprite.h
src/assets/maps/: one.hpp
src/engine/: main.cpp  main.hpp
src/engines/game/: chunks.hpp  engine.hpp
src/engines/license/: engine.hpp
src/engines/menu/: engine.hpp
src/engines/settings/: engine.hpp
src/engines/test/: engine.hpp
src/game/: main.cpp  main.hpp  tilemap.h  ubuntu_font.h
src/logger/: logger.cpp  logger.h
src/objects/: text.hpp
src/utils/: logger.hpp  snl.hpp
src/utils/logger/: main.cpp  main.h
src/utils/snl/: main.h
src/window/: main.cpp  main.h
